# CyLaKS

./: .gitignore  .vimrc (backup)  .vimrc_bck  1.config  100.config  1000.config  1250.config  150.config  2.config  20.config  200.config  22.config  250.config  30.config  40.config  5.config  50.config  500_2.config  55.config  550.config  600.config  650.config  700.config  CMakeLists.txt  LICENSE.md  Makefile  README.md  allocate.c  analysis.c  build_micro_hskuan  build_microtubule.c  c_10.param  c_100.param  c_1000.param  c_5.param  c_test.param  clean_output.sh  constants.h  creat_param  data.config  (+57 more)
analysis/: endtag_length_bulk.m  endtag_length_plot.m  force_plots.m  generate_fluorescent_image.m  generate_fluorescent_kymograph.m  generate_fluorescent_movie.m  generate_kymograph.m  generate_kymograph_image.m  generate_overlap_image.m  generate_overlap_movie.m  get_endtag_length.m  get_endtag_length_xlink.m  get_motor_stats.m  get_motor_stats_old.m  get_parameters.m  heterodimer_mobility.m  lmfao_plot.m  lmfao_plot2.m  load_data.m  load_parameters.m  microtubule_MSD.m  microtubule_forceVel.m  microtubule_multiPF_occupancy_mov.m  microtubule_multiPF_occupancy_plt.m  motor_avg_distance.m  motor_forceDependence.m  motor_mobility.m  motor_processivity.m  motor_states.m  motor_trajectory.m  movie.m  occupancy_profile_overlap.m  occupancy_profile_single.m  occupancy_profile_single_mov.m  ode.m  ode_solver.m  overlap_length_velocity.m  overlap_length_velocity_bulk.m  overlap_length_velocity_plots.m  overlap_occupancy_density.m  (+21 more)
analysis code/: modified_density_profile_analysis.m  read_1D_microtubule_demo.m
analysis/deprecated/: extension_histograms.m  motor_processivity.m  motor_processivity_vs_theory.m  motor_trajectory.m  occupancy_profile_overlap.m  occupancy_profile_single_mov.m  overlap_length_velocity.m  xlink_coop.m
analysis/legacy/: lattice_coop_optimization.m  motor_processivity.m  occupancy_profile_single_mov.m
docker/: Dockerfile  Dockerfile_base
hsk_model/: params.yaml
hsk_model/analysis code/: profile_analysis_multi_mode.m  profile_analysis_overlap.m
hsk_model/src/: curator.cpp  curator.h  kinesin.h  kinesin_management.cpp  kinesin_management.h  microtubule.h  tubulin.cpp  tubulin.h
include/cylaks/: angular_spring.hpp  binding_head.hpp  binding_site.hpp  catalytic_head.hpp  curator.hpp  definitions.hpp  event.hpp  event_manager.hpp  filament_manager.hpp  filament_tester.hpp  linear_spring.hpp  motor.hpp  object.hpp  population.hpp  protein.hpp  protein_manager.hpp  protein_tester.hpp  (+8 more)
matlab analysis/: read_1D_microtubule_demo.m
mgh_model/: .params.yaml.swp  CopyToRun.py  Makefile  README.md  config.summit.rc  coop_scan.sh  endtag_scan.sh  get_motor_stats.m  gradOpt_lattice_coop.py  gradient_optimization.py  job.sh  job_coop_binding.sh  job_endtag.sh  job_endtag_seq.sh  job_gradOpt_lattice.slurm  job_grad_opt.sh  job_occupancy.sh  job_overlap.sh  kif4a_coop_optimization.scan  kif4a_coop_optimization_DOS.scan  kif4a_coop_optimization_lifetimeOnly.scan  kif4a_coop_optimization_velocityOnly.scan  kin1_endtags.sh  kin1_sliding_scan.sh  make_endtag_params.sh  make_param_files.sh  make_slide_params.sh  motor_app_force_scan.sh  motor_eff_conc_scan.sh  motscan_params.yaml  old_Makefile  params.yaml  params_base.yaml  params_base_endtag.yaml  params_base_overlap.yaml  params_endtag.yaml  params_endtags.yaml  params_least_sq.yaml  params_norm.yaml  params_norm_slide.yaml  (+24 more)
mgh_model_single/: README.md  params.yaml
mt_overlap/: README.md  analysis.m~  build_mts  sim  test.config  test.yaml
mutant_tubulin/: params.yaml
new_mt_single/: .params.yaml.swp  .test.yaml.swp  Makefile  build_mts  params.yaml  sim  test.yaml
old_bois/: associated_protein.cpp  associated_protein_management.cpp  associated_protein_management.h  associated_protein_parameters.h  curator.h  entry.hpp  kinesin.cpp  kinesin.h  kinesin_management.cpp  kinesin_parameters.h  microtubule_management.h  system_properties.h
params/: endtag.yaml  k401.yaml  kif4a.yaml  overlap.yaml  params_endtag.yaml  params_heterodimer.yaml  params_k401.yaml  params_kif4a.yaml  params_separation.yaml  prc1.yaml  slide.yaml
proto_mgh_model/: .params.yaml.swp  Makefile  params.yaml
protos_mgh_model/: README.md  params.yaml
scripts/: CopyToRun.py  GradOPt_lattice_coop.py  GradOpt_mobility.py  SubmitJob.slurm  gradOpt_endtags.py  job_coop_binding.sh  job_endtag.slurm  job_kif4a_coop.slurm  job_motor_coop.slurm  job_motor_forceVel.slurm  job_motor_heterodimer.slurm  job_motor_mobility.slurm  job_mt_diffusion.slurm  job_mt_forceVel.slurm  job_mt_hetero_tubulin.slurm  scan_coop_sliding.sh  scan_endtag.sh  scan_endtag_conc.sh  scan_endtag_coop.sh  scan_endtag_vs_coop.sh  scan_mobility_conc.sh  scan_mobility_coop.sh  scan_motor_coop.sh  scan_motor_forceVel.sh  scan_motor_heterodimer.sh  scan_mt_diffusion.sh  scan_mt_forceVel.sh  scan_mt_hetero_tubulin.sh  scan_mt_separation.sh  scan_overlap_occu.sh  scan_processivity.sh  scan_reg_binding.sh  scan_shepherding.sh  scan_xlink_coop.sh  scan_xlink_diffusion.sh  summit_scan.sh
shane_overlap/: Makefile  build_microtubules.cpp  c_100.param  constants.h  gfopen.cpp  kMC.cpp  main.cpp  master_header.h  parameters.h  prototypes.h  ran3.cpp  structures.h
single_mt/: params.yaml
src/: CMakeLists.txt  associated_protein.cpp  associated_protein.h  associated_protein_management.cpp  associated_protein_management.h  binding_head.cpp  binding_head.hpp  binding_site.cpp  binding_site.hpp  catalytic_head.cpp  catalytic_head.hpp  crosslinker.hpp  curator.cpp  curator.h  curator.hpp  definitions.hpp  event.cpp  event.hpp  event_manager.cpp  event_manager.hpp  filament_manager.cpp  filament_manager.hpp  filament_tester.cpp  file_utilities.hpp  kinesin.cpp  kinesin.h  kinesin_management.cpp  kinesin_management.h  linear_spring.hpp  master_header.h  microtubule.cpp  microtubule.h  microtubule_management.cpp  microtubule_management.h  motor.cpp  motor.hpp  object.hpp  population.hpp  protein.cpp  protein.hpp  (+20 more)
src/alpha/: protein.hpp
src/executable/: CMakeLists.txt  main.cpp
(+249 files in other folders)
